--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,19 @@
 /* Add CSS Styling */
+.odd {
+  background-color: rgb(255, 0, 0, 0.4);
+  font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+.odd.cool {
+  font-size: 24px;
+}
+
+#number-2 {
+  color: blue;
+  font-size: 36px;
+}
+
+#number-4 {
+  background-color: rgb(0, 255, 0, 0.7);
+  font-weight: bold;
+  font-size: 24px;
+}
