--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,13 @@
 /* Add CSS Styling */
+button {
+  font-family: Helvetica, "Times New Roman", sans-serif;
+  font-size: 28px;
+}
+
+.button_1 {
+  background-color: black;
+  color: white;
+}
+.button_2 {
+  background-color: yellow;
+}
